# miniRT

./: .gitignore  CMakeLists.txt  README.md  run.sh
example_scene/: example_scene.scene
more_example_scenes/stanford_dragon/: stanford_dragon.scene
src/: CMakeLists.txt  main.cpp
src/accelerator/: octree.cpp  octree.hpp
src/camera/: perspective.cpp  perspective.hpp
src/color/: brdf.cpp  brdf.hpp  color.cpp  color.hpp
src/core/: rendering_equation.cpp  rendering_equation.hpp  scene.cpp  scene.hpp  system.cpp  system.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp
src/geometry/: plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  trimesh.cpp  trimesh.hpp
src/mymath/: bbox.cpp  bbox.hpp  mat4.cpp  mat4.hpp  ray.cpp  ray.hpp  vector3.cpp  vector3.hpp
src/texture/: texture.cpp  texture.hpp
